 - New function "rebin", rebin an axis of an array by contents of another
irbempy
 - Update IRBEMlib to rev620
 - Rev620 adds IGRF13 coefficients
 - Add conversion so all systems supported by coordinates can be passed
   to IRBEMlib routines
 - Fix compilation on Raspberry Pi
plot
 - utils.EventClicker support for non-line plots (e.g. pcolor)
 - New method for adding arrows to lines in utils
pycdf
 - VarCopy objects now carry information to help reproduce original
 - Newly-public method nelems to get number of elements in zVar
 - New function concatCDF to read data from multiple CDFs
 - Fix assignment of "raw" values to EPOCH16 Attribute
 - Fix "minimum value" calculation for TT2000 types
 - Fix carryover of compression parameter when making a variable from
   another variable
 - istp.VariableChecks adds check for VALID/SCALE MIN/MAX Entry types
 - istp.VariableChecks adds check for DELTA attributes
 - istp.VariableChecks adds check for FILLVAL
 - istp.VariableChecks and FileChecks add check for empty attribute Entries
 - istp.VarBundle class to copy variables, slices, and depends between CDFs
 - istp.nanfill function to replace fill values with NaN
 - Warn if make CDF without explicitly setting backward compatible mode
   (either true or false); default will change to NOT backward compatible.
 - Warn if assign datetime to a variable without specifying a type;
   default will change to CDF_TIME_TT2000.
 - Fix epoch_to_num with newer versions of matplotlib.
pybats
 - Updated gitm.GitmBin reader to fix failures in Python 3.x.
 - Fix for incorrect Kyoto Kp plots.
 - Fixed open/closed tolerance kwarg not working in add_b_magsphere.
 - Added new stream trace visualization method for Bats2d objects: add_stream_scatter
 - Bats2d.add_b_magsphere and add_stream_scatter now have kwargs for adding arrows on ray traces
 - Updates to ram.RamSat including omnidirectional flux calculation
 - ram.PressureFile fixed for Python 3.x failures