@@ -1,15 +1,0 @@
-
-
-############################################################################
-spectrogram - Plot space physics spectrogram
-############################################################################
-
-.. automodule:: spacepy.plot.spectrogram
-
-.. currentmodule:: spacepy.plot.spectrogram
-
-.. autosummary::
-    :template: clean_module.rst
-    :toctree: autosummary
-
-    simpleSpectrogram
